// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkerTooltipContents renders tooltips for various markers: Bailout-10 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        0.000ms
      </div>
      <div
        class="tooltipTitle"
      >
        Bailout
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Type
      :
    </div>
    ShapeGuard
    <div
      class="tooltipLabel"
    >
      Where
      :
    </div>
    after getelem
    <div
      class="tooltipLabel"
    >
      Script
      :
    </div>
    resource://foo.js -&gt; resource://bar.js
    <div
      class="tooltipLabel"
    >
      Function Line
      :
    </div>
    3662
    <div
      class="tooltipLabel"
    >
      Bailout Line
      :
    </div>
    3666
    <div
      class="tooltipLabel"
    >
      Description:
    </div>
    <div
      style="max-width: 300px;"
    >
      A shape guard based on TI information failed. (We saw an object whose shape does not match that / any of those observed by the baseline IC.)
    </div>
  </div>
</div>
`;

exports[`MarkerTooltipContents renders tooltips for various markers: ConstructRootFrame-112.5 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        0.80ms
      </div>
      <div
        class="tooltipTitle"
      >
        ConstructRootFrame
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Category
      :
    </div>
    Frame Construction
  </div>
</div>
`;

exports[`MarkerTooltipContents renders tooltips for various markers: DOMEvent-10.5 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        0.80ms
      </div>
      <div
        class="tooltipTitle"
      >
        DOMEvent
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Type
      :
    </div>
    commandupdate
  </div>
</div>
`;

exports[`MarkerTooltipContents renders tooltips for various markers: DiskIO-114 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        1.0ms
      </div>
      <div
        class="tooltipTitle"
      >
        DiskIO
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Operation
      :
    </div>
    create/open
    <div
      class="tooltipLabel"
    >
      Source
      :
    </div>
    PoisonOIInterposer
    <div
      class="tooltipLabel"
    >
      Filename
      :
    </div>
    /foo/bar
  </div>
  <div
    class="tooltipDetailsBackTrace"
  >
    <ol
      class="backtrace"
    >
      <li
        class="backtraceStackFrame"
      >
        nsRefreshDriver::AddStyleFlushObserver
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::GeckoRestyleManager::PostRestyleEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::GeckoRestyleManager::ContentStateChanged
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::PresShell::ContentStateChanged
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        nsDocument::ContentStateChanged
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::dom::Element::RemoveStates
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::EventStateManager::UpdateAncestorState
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::EventStateManager::SetContentState
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::EventStateManager::NotifyMouseOut
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::EventStateManager::GenerateMouseEnterExit
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::EventStateManager::PreHandleEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::PresShell::HandleEventInternal
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::PresShell::HandlePositionedEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::PresShell::HandleEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        nsViewManager::DispatchEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        nsView::HandleEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        nsChildView::DispatchEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        ChildViewMouseTracker::MouseMoved
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        nsAppShell::Run
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        nsAppStartup::Run
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        XREMain::XRE_mainRun
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        XREMain::XRE_main
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        XRE_main
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        _main
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
    </ol>
  </div>
</div>
`;

exports[`MarkerTooltipContents renders tooltips for various markers: GCMajor-16.5 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        0.000ms
      </div>
      <div
        class="tooltipTitle"
      >
        GCMajor
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Reason
      :
    </div>
    ALLOC_TRIGGER
    <div
      class="tooltipLabel"
    >
      Non-incremental reason
      :
    </div>
    GCBytesTrigger
    <div
      class="tooltipLabel"
    >
      Total slice times
      :
    </div>
    85.6ms
    <div
      class="tooltipLabel"
    >
      Max Pause
      :
    </div>
    74.0ms
    <div
      class="tooltipLabel"
    >
      Heap size (pre - post)
      :
    </div>
    46.1MB - 36.3MB
    <div
      class="tooltipLabel"
    >
      MMU 20ms
      :
    </div>
    0.0%
    <div
      class="tooltipLabel"
    >
      MMU 50ms
      :
    </div>
    0.0%
    <div
      class="tooltipLabel"
    >
      Minor GCs
      :
    </div>
    8
    <div
      class="tooltipLabel"
    >
      Slices
      :
    </div>
    2
    <div
      class="tooltipLabel"
    >
      Zones
      :
    </div>
    1 / 4 (25%)
    <div
      class="tooltipLabel"
    >
      Compartments
      :
    </div>
    19
    <div
      class="tooltipLabel"
    >
      Phase minor_gc.mark_roots.mark_stack
      :
    </div>
    1.5ms
    <div
      class="tooltipLabel"
    >
      Phase prepare.purge
      :
    </div>
    6.4ms
    <div
      class="tooltipLabel"
    >
      Phase sweep.sweep_compartments.sweep_jit_data
      :
    </div>
    1.2ms
    <div
      class="tooltipLabel"
    >
      Phase sweep.sweep_mark.sweep_mark_gray
      :
    </div>
    12ms
    <div
      class="tooltipLabel"
    >
      Phase sweep.sweep_mark.sweep_mark_weak
      :
    </div>
    4.1ms
    <div
      class="tooltipLabel"
    >
      Phase wait_background_thread
      :
    </div>
    14ms
  </div>
</div>
`;

exports[`MarkerTooltipContents renders tooltips for various markers: GCMinor-15.5 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        0.000ms
      </div>
      <div
        class="tooltipTitle"
      >
        GCMinor
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Reason
      :
    </div>
    FULL_CELL_PTR_BUFFER
    <div
      class="tooltipLabel"
    >
      Bytes evicted
      :
    </div>
    1.30MB / 1.97MB (66%)
    <div
      class="tooltipLabel"
    >
      Cells evicted
      :
    </div>
    15.9K / 26.6K (60%)
    <div
      class="tooltipLabel"
    >
      Bytes used
      :
    </div>
    1.97MB / 16.0MB (12%)
    <div
      class="tooltipLabel"
    >
      Nursery allocations since last minor GC
      :
    </div>
    26.6K / 38.8K (69%)
    <div
      class="tooltipLabel"
    >
      Tenuring allocation rate
      :
    </div>
    190MB/s
    <div
      class="tooltipLabel"
    >
      Tenuring allocation rate
      :
    </div>
    23.1M/s
    <div
      class="tooltipLabel"
    >
      Phase ClearNursery
      :
    </div>
    1.3ms
    <div
      class="tooltipLabel"
    >
      Phase CollectToFP
      :
    </div>
    3.0ms
    <div
      class="tooltipLabel"
    >
      Phase TraceCells
      :
    </div>
    1.9ms
    <div
      class="tooltipLabel"
    >
      Phase TraceGenericEntries
      :
    </div>
    0.39ms
    <div
      class="tooltipLabel"
    >
      Phase TraceSlots
      :
    </div>
    1.5ms
  </div>
</div>
`;

exports[`MarkerTooltipContents renders tooltips for various markers: GCSlice-17.5 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        0.000ms
      </div>
      <div
        class="tooltipTitle"
      >
        GCSlice
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Reason
      :
    </div>
    CC_WAITING
    <div
      class="tooltipLabel"
    >
      Budget
      :
    </div>
    11ms
    <div
      class="tooltipLabel"
    >
      States (pre - post)
      :
    </div>
    Initial – Final
    <div
      class="tooltipLabel"
    >
      Trigger (amt/trig)
      :
    </div>
    266MB / 245MB
    <div
      class="tooltipLabel"
    >
      Page faults
      :
    </div>
    1
  </div>
</div>
`;

exports[`MarkerTooltipContents renders tooltips for various markers: Invalidate-10 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        0.000ms
      </div>
      <div
        class="tooltipTitle"
      >
        Invalidate
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      URL
      :
    </div>
    http://mozilla.com/script.js
    <div
      class="tooltipLabel"
    >
      Line
      :
    </div>
    1234
  </div>
</div>
`;

exports[`MarkerTooltipContents renders tooltips for various markers: Load 31: http://wikia.com/-10.5 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        101ms
      </div>
      <div
        class="tooltipTitle"
      >
        Load 31: http://wikia.com/
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Status
      :
    </div>
    Waiting for response
    <div
      class="tooltipLabel"
    >
      URL
      :
    </div>
    http://wikia.com/
    <div
      class="tooltipLabel"
    >
      Priority
      :
    </div>
    Low(8)
  </div>
</div>
`;

exports[`MarkerTooltipContents renders tooltips for various markers: Load 31: http://wikia.com/-18670.5141769375 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        66ms
      </div>
      <div
        class="tooltipTitle"
      >
        Load 31: http://wikia.com/
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Status
      :
    </div>
    Redirecting request
    <div
      class="tooltipLabel"
    >
      Cache
      :
    </div>
    any string could be here
    <div
      class="tooltipLabel"
    >
      URL
      :
    </div>
    http://www.wikia.com/
    <div
      class="tooltipLabel"
    >
      Redirect URL
      :
    </div>
    Load 1234: http://img.buzzfeed.com/buzzfeed-static/static/2018-04/29/11/tmp/buzzfeed-prod-web-02/tmp-name-2-18011-1525016782-0_dblwide.jpg?output-format=auto&output-quality=auto&resize=625:*
    <div
      class="tooltipLabel"
    >
      Priority
      :
    </div>
    Highest(-20)
    <div
      class="tooltipLabel"
    >
      Requested bytes
      :
    </div>
    0.000B
  </div>
</div>
`;

exports[`MarkerTooltipContents renders tooltips for various markers: Load 1234: http://img.buzzfeed.com/buzzfeed-static/static/2018-04/29/11/tmp/buzzfeed-prod-web-02/tmp-name-2-18011-1525016782-0_dblwide.jpg?output-format=auto&output-quality=auto&resize=625:*-111 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        11ms
      </div>
      <div
        class="tooltipTitle"
      >
        Load 1234: http://img.buzzfeed.com/buzzfeed-static/static/2018-04/29/11/tmp/buzzfeed-prod-web-02/tmp-name-2-18011-1525016782-0_dblwide.jpg?output-format=auto&output-quality=auto&resize=625:*
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Status
      :
    </div>
    other
    <div
      class="tooltipLabel"
    >
      Priority
      :
    </div>
    Low(8)
  </div>
</div>
`;

exports[`MarkerTooltipContents renders tooltips for various markers: Load 1234: http://img.buzzfeed.com/buzzfeed-static/static/2018-04/29/11/tmp/buzzfeed-prod-web-02/tmp-name-2-18011-1525016782-0_dblwide.jpg?output-format=auto&output-quality=auto&resize=625:*-13382.453655062502 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        205ms
      </div>
      <div
        class="tooltipTitle"
      >
        Load 1234: http://img.buzzfeed.com/buzzfeed-static/static/2018-04/29/11/tmp/buzzfeed-prod-web-02/tmp-name-2-18011-1525016782-0_dblwide.jpg?output-format=auto&output-quality=auto&resize=625:*
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Status
      :
    </div>
    Response received
    <div
      class="tooltipLabel"
    >
      Cache
      :
    </div>
    Hit
    <div
      class="tooltipLabel"
    >
      URL
      :
    </div>
    https://img.buzzfeed.com/buzzfeed-static/static/2018-04/29/11/tmp/buzzfeed-prod-web-02/tmp-name-2-18011-1525016782-0_dblwide.jpg?output-format=auto&output-quality=auto&resize=625:*
    <div
      class="tooltipLabel"
    >
      Priority
      :
    </div>
    Low(8)
    <div
      class="tooltipLabel"
    >
      Requested bytes
      :
    </div>
    45.9KB
    <div
      class="tooltipLabel"
    >
      Response time
      :
    </div>
    3.5ms
  </div>
</div>
`;

exports[`MarkerTooltipContents renders tooltips for various markers: Log-21.7 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        0.000ms
      </div>
      <div
        class="tooltipTitle"
      >
        Log
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Module
      :
    </div>
    RandomModule
    <div
      class="tooltipLabel"
    >
      Name
      :
    </div>
    Random log message
  </div>
</div>
`;

exports[`MarkerTooltipContents renders tooltips for various markers: NotifyDidPaint-14.5 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class=""
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        unknown duration
      </div>
      <div
        class="tooltipTitle"
      >
        NotifyDidPaint
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
</div>
`;

exports[`MarkerTooltipContents renders tooltips for various markers: Styles-18.5 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        0.50ms
      </div>
      <div
        class="tooltipTitle"
      >
        Styles
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    class="tooltipDetailsBackTrace"
  >
    <h2
      class="tooltipBackTraceTitle"
    >
      First invalidated 
      1.5
      ms before the flush, at:
    </h2>
    <ol
      class="backtrace"
    >
      <li
        class="backtraceStackFrame"
      >
        nsRefreshDriver::AddStyleFlushObserver
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::GeckoRestyleManager::PostRestyleEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::GeckoRestyleManager::ContentStateChanged
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::PresShell::ContentStateChanged
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        nsDocument::ContentStateChanged
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::dom::Element::RemoveStates
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::EventStateManager::UpdateAncestorState
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::EventStateManager::SetContentState
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::EventStateManager::NotifyMouseOut
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::EventStateManager::GenerateMouseEnterExit
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::EventStateManager::PreHandleEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::PresShell::HandleEventInternal
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::PresShell::HandlePositionedEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::PresShell::HandleEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        nsViewManager::DispatchEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        nsView::HandleEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        nsChildView::DispatchEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        ChildViewMouseTracker::MouseMoved
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        nsAppShell::Run
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        nsAppStartup::Run
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        XREMain::XRE_mainRun
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        XREMain::XRE_main
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        XRE_main
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        _main
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
    </ol>
  </div>
</div>
`;

exports[`MarkerTooltipContents renders tooltips for various markers: Styles-20 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        0.50ms
      </div>
      <div
        class="tooltipTitle"
      >
        Styles
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Elements traversed
      :
    </div>
    100
    <div
      class="tooltipLabel"
    >
      Elements styled
      :
    </div>
    50
    <div
      class="tooltipLabel"
    >
      Elements matched
      :
    </div>
    10
    <div
      class="tooltipLabel"
    >
      Styles shared
      :
    </div>
    15
    <div
      class="tooltipLabel"
    >
      Styles reused
      :
    </div>
    20
  </div>
  <div
    class="tooltipDetailsBackTrace"
  >
    <h2
      class="tooltipBackTraceTitle"
    >
      First invalidated 
      0.50
      ms before the flush, at:
    </h2>
    <ol
      class="backtrace"
    >
      <li
        class="backtraceStackFrame"
      >
        nsRefreshDriver::AddStyleFlushObserver
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::GeckoRestyleManager::PostRestyleEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::GeckoRestyleManager::ContentStateChanged
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::PresShell::ContentStateChanged
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        nsDocument::ContentStateChanged
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::dom::Element::RemoveStates
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::EventStateManager::UpdateAncestorState
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::EventStateManager::SetContentState
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::EventStateManager::NotifyMouseOut
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::EventStateManager::GenerateMouseEnterExit
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::EventStateManager::PreHandleEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::PresShell::HandleEventInternal
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::PresShell::HandlePositionedEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        mozilla::PresShell::HandleEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        nsViewManager::DispatchEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        nsView::HandleEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        nsChildView::DispatchEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        ChildViewMouseTracker::MouseMoved
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        nsAppShell::Run
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        nsAppStartup::Run
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        XREMain::XRE_mainRun
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        XREMain::XRE_main
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        XRE_main
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame"
      >
        _main
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
    </ol>
  </div>
</div>
`;

exports[`MarkerTooltipContents renders tooltips for various markers: TTFI-21.4 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        0.000ms
      </div>
      <div
        class="tooltipTitle"
      >
        TTFI
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Name
      :
    </div>
    TTFI after 100.01ms (longTask was 100.001ms)
  </div>
</div>
`;

exports[`MarkerTooltipContents renders tooltips for various markers: UserTiming-12.5 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        0.000ms
      </div>
      <div
        class="tooltipTitle"
      >
        UserTiming
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Thread:
      </div>
      Main Thread
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Name
      :
    </div>
    foobar
  </div>
</div>
`;
